--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         }
         .tv {
             position: relative;
-            width: 1000px;
-            height: 1000px;
+            width: 1920px;
+            height: 100vh;
         }
         iframe {
-            width: 1000px;
-            height: 1000px;
+            width: 1920px;
+            height: 100vh;
         }
     </style>
 </head>
