--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
             padding: 0;
             background-color: black;
         }
-        .tv {
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container div {
+            rotate: 90deg;
+            scale: 1.8;
             width: 100%;
             height: 100%;
         }
@@ -22,7 +30,9 @@
 </head>
 <body>
 <!-- Add a placeholder for the Twitch embed -->
-<div id="twitch-embed"></div>
+ <div class="container">
+     <div id="twitch-embed"></div>
+ </div>
 
 <!-- Load the Twitch embed script -->
 <script src="https://player.twitch.tv/js/embed/v1.js"></script>
